Add Docker support

--- a/examples/contributor-classification.ipynb
+++ b/examples/contributor-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -987,7 +987,7 @@
        "[7749 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,21 +1002,410 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'role' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-8c8704f19b42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mroles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontributors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassify\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mcontribs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrole\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"contributor\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mcontribs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'role' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>login</th>\n",
+       "      <th>role</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>69820</th>\n",
+       "      <td>jeremy</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175556</th>\n",
+       "      <td>dhh</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43434</th>\n",
+       "      <td>josevalim</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31607</th>\n",
+       "      <td>tenderlove</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170069</th>\n",
+       "      <td>rafaelfranca</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175103</th>\n",
+       "      <td>fxn</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30535</th>\n",
+       "      <td>josh</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22053</th>\n",
+       "      <td>spastorino</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170043</th>\n",
+       "      <td>carlosantoniodasilva</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178284</th>\n",
+       "      <td>lifo</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17402</th>\n",
+       "      <td>vijaydev</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56175</th>\n",
+       "      <td>NZKoz</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2638</th>\n",
+       "      <td>jonleighton</td>\n",
+       "      <td>maintainer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76561</th>\n",
+       "      <td>wycats</td>\n",
+       "      <td>major_contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72858</th>\n",
+       "      <td>technoweenie</td>\n",
+       "      <td>major_contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169886</th>\n",
+       "      <td>drogus</td>\n",
+       "      <td>major_contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28080</th>\n",
+       "      <td>guilleiguaran</td>\n",
+       "      <td>major_contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172474</th>\n",
+       "      <td>jamis</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14527</th>\n",
+       "      <td>senny</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20038</th>\n",
+       "      <td>arunagw</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170219</th>\n",
+       "      <td>pixeltrix</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>506603</th>\n",
+       "      <td>WELTBBTP</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180058</th>\n",
+       "      <td>radar</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152882</th>\n",
+       "      <td>tadast</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173234</th>\n",
+       "      <td>frodsan</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185659</th>\n",
+       "      <td>robinroestenburg</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190005</th>\n",
+       "      <td>seckar</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27597</th>\n",
+       "      <td>steveklabnik</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124155</th>\n",
+       "      <td>amatsuda</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170622</th>\n",
+       "      <td>kennyj</td>\n",
+       "      <td>contributor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507678</th>\n",
+       "      <td>josegit</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507679</th>\n",
+       "      <td>darraghcurran</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507680</th>\n",
+       "      <td>vomelchenko</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507681</th>\n",
+       "      <td>KernComm</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507682</th>\n",
+       "      <td>rotor</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507683</th>\n",
+       "      <td>leword</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507684</th>\n",
+       "      <td>acook8103</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507686</th>\n",
+       "      <td>olliesaunders</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507687</th>\n",
+       "      <td>tedhenry10</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507688</th>\n",
+       "      <td>yawningman</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507689</th>\n",
+       "      <td>Yardboy</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507690</th>\n",
+       "      <td>chicagogrooves</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507691</th>\n",
+       "      <td>ryanLonac</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507692</th>\n",
+       "      <td>testy-mctesterson-iseatz</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507693</th>\n",
+       "      <td>yourewelcome</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507694</th>\n",
+       "      <td>nicb</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507698</th>\n",
+       "      <td>paxx2</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507700</th>\n",
+       "      <td>regabi</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507703</th>\n",
+       "      <td>TipMobileMirko</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507704</th>\n",
+       "      <td>jon-eachscape</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507705</th>\n",
+       "      <td>TinyFox</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507706</th>\n",
+       "      <td>pesty</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507707</th>\n",
+       "      <td>seamxr</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507708</th>\n",
+       "      <td>giro54</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507712</th>\n",
+       "      <td>cburnette</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507719</th>\n",
+       "      <td>slezica</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507720</th>\n",
+       "      <td>damir</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507722</th>\n",
+       "      <td>ktacheny</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507726</th>\n",
+       "      <td>oalca</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507727</th>\n",
+       "      <td>bush</td>\n",
+       "      <td>user</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7749 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            login               role\n",
+       "user_id                                             \n",
+       "69820                      jeremy         maintainer\n",
+       "175556                        dhh         maintainer\n",
+       "43434                   josevalim         maintainer\n",
+       "31607                  tenderlove         maintainer\n",
+       "170069               rafaelfranca         maintainer\n",
+       "175103                        fxn         maintainer\n",
+       "30535                        josh         maintainer\n",
+       "22053                  spastorino         maintainer\n",
+       "170043       carlosantoniodasilva         maintainer\n",
+       "178284                       lifo         maintainer\n",
+       "17402                    vijaydev         maintainer\n",
+       "56175                       NZKoz         maintainer\n",
+       "2638                  jonleighton         maintainer\n",
+       "76561                      wycats  major_contributor\n",
+       "72858                technoweenie  major_contributor\n",
+       "169886                     drogus  major_contributor\n",
+       "28080               guilleiguaran  major_contributor\n",
+       "172474                      jamis        contributor\n",
+       "14527                       senny        contributor\n",
+       "20038                     arunagw        contributor\n",
+       "170219                  pixeltrix        contributor\n",
+       "506603                   WELTBBTP               user\n",
+       "180058                      radar               user\n",
+       "152882                     tadast        contributor\n",
+       "173234                    frodsan        contributor\n",
+       "185659           robinroestenburg        contributor\n",
+       "190005                     seckar               user\n",
+       "27597                steveklabnik        contributor\n",
+       "124155                   amatsuda        contributor\n",
+       "170622                     kennyj        contributor\n",
+       "...                           ...                ...\n",
+       "507678                    josegit               user\n",
+       "507679              darraghcurran               user\n",
+       "507680                vomelchenko               user\n",
+       "507681                   KernComm               user\n",
+       "507682                      rotor               user\n",
+       "507683                     leword               user\n",
+       "507684                  acook8103               user\n",
+       "507686              olliesaunders               user\n",
+       "507687                 tedhenry10               user\n",
+       "507688                 yawningman               user\n",
+       "507689                    Yardboy               user\n",
+       "507690             chicagogrooves               user\n",
+       "507691                  ryanLonac               user\n",
+       "507692   testy-mctesterson-iseatz               user\n",
+       "507693               yourewelcome               user\n",
+       "507694                       nicb               user\n",
+       "507698                      paxx2               user\n",
+       "507700                     regabi               user\n",
+       "507703             TipMobileMirko               user\n",
+       "507704              jon-eachscape               user\n",
+       "507705                    TinyFox               user\n",
+       "507706                      pesty               user\n",
+       "507707                     seamxr               user\n",
+       "507708                     giro54               user\n",
+       "507712                  cburnette               user\n",
+       "507719                    slezica               user\n",
+       "507720                      damir               user\n",
+       "507722                   ktacheny               user\n",
+       "507726                      oalca               user\n",
+       "507727                       bush               user\n",
+       "\n",
+       "[7749 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1039,8 +1428,7 @@
     "    \n",
     "\n",
     "roles = contributors.apply(classify, axis=1)\n",
-    "contribs = roles.filter(role==\"contributor\")\n",
-    "contribs"
+    "roles"
    ]
   },
   {
