--- a/notebooks/Commits.ipynb
+++ b/notebooks/Commits.ipynb
@@ -117,6 +117,7 @@
     }
    ],
    "source": [
+    "#Shows commits over 100\n",
     "print(ghtorrent.commits1('rails', 'rails'))"
    ]
   },
@@ -233,6 +234,7 @@
     }
    ],
    "source": [
+    "#Shows the amount of fake users per week\n",
     "print(ghtorrent.contributors1(owner='rails',repo='rails'))"
    ]
   },
