--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -455,8 +455,8 @@
        "    <tr>\n",
        "      <th>703</th>\n",
        "      <td>2018-05-13</td>\n",
-       "      <td>192</td>\n",
-       "      <td>208</td>\n",
+       "      <td>291</td>\n",
+       "      <td>269</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -525,12 +525,12 @@
        "700 2018-04-22       2127       1991\n",
        "701 2018-04-29        310        145\n",
        "702 2018-05-06        307        202\n",
-       "703 2018-05-13        192        208\n",
+       "703 2018-05-13        291        269\n",
        "\n",
        "[704 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,6 +539,111 @@
     "## Note that this is an example of how to call the function\n",
     "\n",
     "lines_deleted(github,\"rails\", \"rails\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stan = augurApp.github()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def bus_factor(self, owner, repo, filename=None, start=None, end=None, threshold=50):\n",
+    "        \"\"\"\n",
+    "        Calculates bus factor by adding up percentages from highest to lowest until they exceed threshold\n",
+    "\n",
+    "        :param owner: repo owner username\n",
+    "        :param repo: repo name\n",
+    "        :param filename: optional; file or directory for function to run on\n",
+    "        :param start: optional; start time for analysis\n",
+    "        :param end: optional; end time for analysis\n",
+    "        :param threshold: Default 50;\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if start != None:\n",
+    "            start = parse(start)\n",
+    "        else:\n",
+    "            start = github.GithubObject.NotSet\n",
+    "\n",
+    "        if end != None:\n",
+    "            end = parse(end)\n",
+    "        else:\n",
+    "            end = github.GithubObject.NotSet\n",
+    "\n",
+    "        commits = self.__api.get_repo((owner + \"/\" + repo)).get_commits(since=start, until=end)\n",
+    "\n",
+    "        if filename != None:\n",
+    "            self.__api.get_repo((owner + \"/\" + repo)).get_contents(filename)\n",
+    "\n",
+    "        df = []\n",
+    "\n",
+    "        if filename != None:\n",
+    "            for commit in commits:\n",
+    "                for file in commit.files:\n",
+    "                    if file.filename == filename:\n",
+    "                        try:\n",
+    "                            df.append({'userid': commit.author.id})\n",
+    "                        except AttributeError:\n",
+    "                            pass\n",
+    "                        break\n",
+    "        else:\n",
+    "            for commit in commits:\n",
+    "                try:\n",
+    "                    df.append({'userid': commit.author.id})\n",
+    "                except AttributeError:\n",
+    "                    pass\n",
+    "\n",
+    "        df = pd.DataFrame(df)\n",
+    "\n",
+    "        df = df.groupby(['userid']).userid.count() / df.groupby(['userid']).userid.count().sum() * 100\n",
+    "\n",
+    "        i = 0\n",
+    "        for num in df.cumsum():\n",
+    "            i = i + 1\n",
+    "            if num >= threshold:\n",
+    "                worst = i\n",
+    "                break\n",
+    "\n",
+    "        i = 0\n",
+    "        for num in df.sort_values(ascending=True).cumsum():\n",
+    "            i = i + 1\n",
+    "            if num >= threshold:\n",
+    "                best = i\n",
+    "                break\n",
+    "\n",
+    "        bus_factor = [{'worst': worst, 'best' : best}]\n",
+    "\n",
+    "        return pd.DataFrame(bus_factor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'GitHubAPI' object has no attribute 'GithubObject'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-6402d82c815e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbus_factor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rails\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rails\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-faaec3518e98>\u001b[0m in \u001b[0;36mbus_factor\u001b[0;34m(self, owner, repo, filename, start, end, threshold)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgithub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGithubObject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNotSet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'GitHubAPI' object has no attribute 'GithubObject'"
+     ]
+    }
+   ],
+   "source": [
+    "bus_factor(stan, \"rails\", \"rails\")"
    ]
   },
   {
